--- a/style.css
+++ b/style.css
@@ -1,28 +1,37 @@
+.container-fluid{
+  width: 95%;
+}
 .movie-container {
   display: flex;
   flex-wrap: wrap;
   position: relative;
   justify-content: space-between;
+  column-gap: 4px;
 }
 .movie {
-  width: 60px;
+  width: 52px;
   height: 300px;
   box-shadow: 0px 6px 0px #a8a8a8, 0px 10px 4px black;
   transition: all .15s ease-in-out;
 }
-
+h5{
+  font-size: 14px;
+}
+p{
+  font-size: 10px;
+}
+.black h5{
+  font-size: 12px;
+}
+.black p{
+  font-size: 9px;
+}
 .black{
   background-color: black;
   color: aliceblue;
   box-shadow: 0px 6px 0px grey, 0px 10px 4px black;
-  width: 55px;
+  width: 47px;
   height: 150px;
-}
-.black h5{
-  font-size: 16px;
-}
-.black p{
-  font-size: 11px;
 }
 :is(.movie, .black):active {
   box-shadow: none;
